2010-10-16 - release 0.10.0pre3
        - Bugfix: Wheels 128 loader detection fixed

2010-10-15 - release 0.10.0pre2
        - Bugfix: G-P answer fixed
        - Bugfix: Strip 0x0d from file names when appropiate
        - Wheels support

2010-08-06 - release 0.10.0pre1
        - GEOS 2.0 support (d64/d71/d81 images only)
        - File-based M-R emulation
        - Removed "oldnkc" configuration

2010-08-02 - release 0.9.3
        - Bugfix: Extension hiding works again with names >12 characters
        - Bugfix: Increase data hold time during standard TALK
        - Testing aid: card detect-to-LED function

2010-06-21 - release 0.9.2
        - Bugfix: Rename was broken on FAT
        - Turbodisk is now disabled when running on internal RC clock
        - button debounce timeout increased

2010-03-07 - release 0.9.1
        - Bugfix: Filling unused REL records used wrong offsets
        - Bugfix: Unbreak case-insensitive matching of FAT file names
        - Bugfix: Fix raw directory mode for D64/D71/D81
        - Bugfix: Tell the display about REL files too
        - add preliminary support for the ATmega1284P

2010-02-28 - release 0.9.0
        - Bugfix: REL offset calculation for records 256,512,...
        - Bugfix: Non-REL P command parameters now match README
        - Bugfix: Reading after EOI behaves correctly now
        - Red LED only active while unwritten data in memory
        - Remove XC,XJ commands
        - New fastloader: ULoad Model 3
        - New fastloader: G.I. Joe (said to be commonly ripped)
        - New fastloader: Epyx FastLoad cartridge
        - Support reading raw directory ($ with secondary > 0)
        - "display disk images as directories"-mode
        - DNP support
        - remote display support
        - build system doesn't require gawk anymore

2009-12-16 - release 0.8.3
        - Bugfix: Really prevent random corruption on FAT32 media
        - Bugfix: Free buffer after copying files

2009-09-27 - release 0.8.2